--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,31 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<!--<h1>Books#edit</h1>-->
+<!--<p>Find me in app/views/books/edit.html.erb</p>-->
+<h1>Editing book</h1>
+    <%=form_with model:@book,local:true do |f| %>
+    <% if @book.errors.any? %>
+      <%= @book.errors.count %>error prohibited this book from being saved:
+      <% @book.errors.full_messages.each do |message| %>
+        <%= message %>
+      <% end %>
+    <% end %>
+
+      <div class="form-label">
+        <%=f.label :name, 'Title'%>
+      </div>
+      <div class="form-item">
+        <%=f.text_field :title%>
+      </div>
+      <div class="form-label">
+        <%=f.label :name, 'Body'%>
+      </div>
+      <div class="form-item">
+        <%=f.text_area :body%>
+      </div>
+      <%=f.submit 'Update Book'%>
+    <%end%>
+
+    <body>
+      <%=link_to 'Show',book_path(@book.id), class:"setting link"%>
+      |
+      <%=link_to 'Back',books_path,class:"setting link"%>
+    </body>
