--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,60 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<!--<h1>Books#index</h1>-->
+<!--<p>Find me in app/views/books/index.html.erb</p>-->
+<!DOCTYPE HTML>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8"/>
+    <title>Books</title>
+  </head>
+
+  <body>
+    <h1 class="category">Books</h1>
+    <table>
+      <tr>
+        <th>Title</th>
+        <th>Body</th>
+        <th></th>
+      </tr>
+
+
+      <%@books.each do |book|%>
+      <tr>
+        <td><%=book.title%></td>
+        <td><%=book.body%></td>
+        <td>
+          <%=link_to 'Show',book_path(book.id), class:"setting link"%>
+        </td>
+        <td>
+          <%=link_to 'Edit',edit_book_path(book.id), class:"setting link"%></td>
+        <td>
+          <%=link_to 'Destroy',book_path(book),method: :delete, class:"setting link"%>
+        </td>
+      </tr>
+      <%end%>
+    </table>
+
+
+    <h2>New book</h2>
+      <% if @book.errors.any? %>
+        <%= @book.errors.count %>error prohibited this book from being saved:
+        <% @book.errors.full_messages.each do |message| %>
+          <%= message %>
+        <% end %>
+      <% end %>
+
+      <%=form_with model: @book,local: true, id: "form" do |f| %>
+      <div class="form-label">
+        <%=f.label :name, 'Title'%>
+      </div>
+      <div class="form-item">
+        <%=f.text_field :title%>
+      </div>
+      <div class="form-label">
+        <%=f.label :name, 'Body'%>
+      </div>
+      <div class="form-item">
+        <%=f.text_area :body%>
+      </div>
+        <%=f.submit 'Create Book'%>
+      <%end%>
+  </body>
