--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8"/>
     <title>Bookers</title>
+    <link rel="stylesheet" href="homes.scss">
   </head>
 
   <body>
-    <h1>ようこそBookersへ！</h1>
-    <p>Bookersでは、さまざまな書籍に関するあなたの意見や<br>
-    印象を共有し交換することができます</p>
-    <p>
-      <a href="/books">start</a>
-    </p>
+    <h1>ようこそ <span>Bookers</span> へ！</h1>
+    <main>
+      <p><span>Bookers</span>では、さまざまな書籍に関するあなたの意見や<br>
+      印象を共有し交換することができます</p>
+        <%=link_to 'Start',books_path, class:"setting start"%>
+    </main>
   </body>
 </html>
